--- a/src/app/viewgalary/viewgalary.component.html
+++ b/src/app/viewgalary/viewgalary.component.html
@@ -4,7 +4,7 @@
             <div class="row g-3">
                 <div *ngFor="let i of data"class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
                     <div class="card" >
-                        <img src="{{i.thumbnailUrl}}" class="card-img-top" alt="...">
+                        <img height="250px"src="{{i.thumbnailUrl}}" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">{{i.title}}</h5>
                           <p class="card-text"></p>
